// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HeaderBar Snapshots should match snapshot when disabled 1`] = `
<div>
  <div
    class="flex items-center h-[56px] flex-shrink-0 w-full rounded-[2px] border border-[#DADEE0] text-[#475466] bg-[#FFFFFF]"
  >
    <div
      class="flex flex-1 items-center ml-[12px]"
    >
      <span
        class="font-medium mr-4 text-[#475466]"
      >
        Files
      </span>
      <div
        class="flex-1 max-w-[300px] min-w-[10px] flex items-center h-[32px] relative overflow-hidden"
      >
        <input
          class="flex-1 rounded-[3px] border border-[#CCD7E6] focus:border-[#1CA1C1] text-[#475466] text-sm px-2 focus:outline-none w-full h-full"
          disabled=""
          name="search"
          placeholder="Search files and folders"
          type="text"
          value=""
        />
        <button
          data-testid="icon-button"
        >
          <svg
            data-testid="icon-svg"
          />
        </button>
      </div>
    </div>
    <div
      class="flex items-center space-x-1 mr-[12px]"
    >
      <button
        data-testid="icon-button"
        disabled=""
      >
        <svg
          data-testid="icon-svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`HeaderBar Snapshots should match snapshot when fetching 1`] = `
<div>
  <div
    class="flex items-center h-[56px] flex-shrink-0 w-full rounded-[2px] border border-[#DADEE0] text-[#475466] bg-[#FFFFFF]"
  >
    <div
      class="flex flex-1 items-center ml-[12px]"
    >
      <span
        class="font-medium mr-4 text-[#475466]"
      >
        Files
      </span>
      <div
        class="flex-1 max-w-[300px] min-w-[10px] flex items-center h-[32px] relative overflow-hidden"
      >
        <input
          class="flex-1 rounded-[3px] border border-[#CCD7E6] focus:border-[#1CA1C1] text-[#475466] text-sm px-2 focus:outline-none w-full h-full"
          disabled=""
          name="search"
          placeholder="Search files and folders"
          type="text"
          value=""
        />
        <button
          data-testid="icon-button"
        >
          <svg
            data-testid="icon-svg"
          />
        </button>
      </div>
    </div>
    <div
      class="flex items-center space-x-1 mr-[12px]"
    >
      <button
        data-testid="icon-button"
        disabled=""
      >
        <svg
          data-testid="icon-svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`HeaderBar Snapshots should match snapshot with default props 1`] = `
<div>
  <div
    class="flex items-center h-[56px] flex-shrink-0 w-full rounded-[2px] border border-[#DADEE0] text-[#475466] bg-[#FFFFFF]"
  >
    <div
      class="flex flex-1 items-center ml-[12px]"
    >
      <span
        class="font-medium mr-4 text-[#475466]"
      >
        Files
      </span>
      <div
        class="flex-1 max-w-[300px] min-w-[10px] flex items-center h-[32px] relative overflow-hidden"
      >
        <input
          class="flex-1 rounded-[3px] border border-[#CCD7E6] focus:border-[#1CA1C1] text-[#475466] text-sm px-2 focus:outline-none w-full h-full"
          name="search"
          placeholder="Search files and folders"
          type="text"
          value=""
        />
        <button
          data-testid="icon-button"
        >
          <svg
            data-testid="icon-svg"
          />
        </button>
      </div>
    </div>
    <div
      class="flex items-center space-x-1 mr-[12px]"
    >
      <button
        data-testid="icon-button"
      >
        <svg
          data-testid="icon-svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`HeaderBar Snapshots should match snapshot with preview mode active 1`] = `
<div>
  <div
    class="flex items-center h-[56px] flex-shrink-0 w-full rounded-[2px] border border-[#DADEE0] text-[#475466] bg-[#FFFFFF]"
  >
    <div
      class="flex flex-1 items-center ml-[12px]"
    >
      <span
        class="font-medium mr-4 text-[#475466]"
      >
        Files
      </span>
      <div
        class="flex-1 max-w-[300px] min-w-[10px] flex items-center h-[32px] relative overflow-hidden"
      >
        <input
          class="flex-1 rounded-[3px] border border-[#CCD7E6] focus:border-[#1CA1C1] text-[#475466] text-sm px-2 focus:outline-none w-full h-full"
          name="search"
          placeholder="Search files and folders"
          type="text"
          value=""
        />
        <button
          data-testid="icon-button"
        >
          <svg
            data-testid="icon-svg"
          />
        </button>
      </div>
    </div>
    <div
      class="flex items-center space-x-1 mr-[12px]"
    >
      <button
        data-testid="icon-button"
      >
        <svg
          data-testid="icon-svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`HeaderBar Snapshots should match snapshot with search query 1`] = `
<div>
  <div
    class="flex items-center h-[56px] flex-shrink-0 w-full rounded-[2px] border border-[#DADEE0] text-[#475466] bg-[#FFFFFF]"
  >
    <div
      class="flex flex-1 items-center ml-[12px]"
    >
      <span
        class="font-medium mr-4 text-[#475466]"
      >
        Files
      </span>
      <div
        class="flex-1 max-w-[300px] min-w-[10px] flex items-center h-[32px] relative overflow-hidden"
      >
        <input
          class="flex-1 rounded-[3px] border border-[#CCD7E6] focus:border-[#1CA1C1] text-[#475466] text-sm px-2 focus:outline-none w-full h-full"
          name="search"
          placeholder="Search files and folders"
          type="text"
          value="test file"
        />
        <button
          data-testid="icon-button"
        >
          <svg
            data-testid="icon-svg"
          />
        </button>
      </div>
    </div>
    <div
      class="flex items-center space-x-1 mr-[12px]"
    >
      <button
        data-testid="icon-button"
      >
        <svg
          data-testid="icon-svg"
        />
      </button>
    </div>
  </div>
</div>
`;
